# visp-minimal

./: CMakeLists.txt  README.md  visp-minimal.cpp
.github/workflows/: cmake-multi-platform-conda.yml
